# WebDesignCraft

./: .htaccess  .replit  README.md  app.py  create_admin.py  create_sample_data.py  database_schema.sql  forms.py  index.php  login.php  logout.php  migrate_database.py  models.py  pyproject.toml  register.php  routes.py  run.php  setup.php  upgrade_database.py
